# LuminaLite

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
depends/: CMakeLists.txt
depends/tgaimage/: CMakeLists.txt
src/: CMakeLists.txt
src/basicRender/: CMakeLists.txt  draw_geo.cpp  draw_geo.h  draw_triangle.h  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h
src/rayCaster/: CMakeLists.txt  main.cpp
